# notebook-lr

./: .gitignore  AGENTS.md  PLAN.md  README.md  jest.config.js  notebook.nblr  package-lock.json  package.json  pyproject.toml  requirements.txt  test.nblr
.gemini/: settings.json
.omc/: project-memory.json
.omc/sessions/: 123f3c0a-971d-41ed-955d-c38c519f95bb.json
.omc/state/: agent-replay-123f3c0a-971d-41ed-955d-c38c519f95bb.jsonl  hud-state.json  hud-stdin-cache.json  (+2 more)
docs/: mcp-design.md
examples/: btree_fastpath.nblr  hello.nblr  ml_intro.nblr
notebook_lr/: __init__.py  cli.py  file_watcher.py  kernel.py  mcp_server.py  notebook.py  session.py  utils.py  web.py
tests/: __init__.py  conftest.py  test_build_mime_bundle.py  test_cell_insertion.py  test_cell_model_edge_cases.py  test_cli_file_sync.py  test_cli_web.py  test_comment_context.py  test_comment_model.py  test_e2e_cli.py  test_e2e_integration.py  test_e2e_kernel.py  test_e2e_notebook_format.py  test_e2e_scenarios.py  test_e2e_web.py  test_editor_cells.py  test_editor_nav_exec.py  test_file_sync_integration.py  test_file_watcher.py  test_kernel.py  test_kernel_errors.py  test_kernel_exec_result.py  test_kernel_namespace.py  test_mcp_cell_content.py  test_mcp_cell_management.py  test_mcp_comments.py  test_mcp_edge_cases.py  test_mcp_notebook_ops.py  test_mermaid_rendering.py  test_notebook.py  test_notebook_crud.py  test_notebook_io.py  test_phase1_features.py  test_session.py  test_session_checkpoint.py  test_session_edge.py  test_sync.py  test_utils.py  test_utils_format.py  test_utils_helpers.py  (+5 more)
(+18 files in other folders)
