[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notebook-lr"
version = "0.1.0"
description = "A Jupyter-like notebook system with persistent session context"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "notebook-lr" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ipython>=8.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "dill>=0.3.0",
    "flask>=3.1.3",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
web = ["flask>=3.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
notebook-lr = "notebook_lr.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["notebook_lr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
